@@ -4547,6 +4547,18 @@ name|indexInfo
 operator|.
 name|add
 argument_list|(
+literal|"indexHeapUsageBytes"
+argument_list|,
+name|getIndexHeapUsed
+argument_list|(
+name|reader
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|indexInfo
+operator|.
+name|add
+argument_list|(
 literal|"version"
 argument_list|,
 name|reader
@@ -4665,6 +4677,74 @@ expr_stmt|;
 block|}
 return|return
 name|indexInfo
+return|;
+block|}
+comment|/** Returns the sum of RAM bytes used by each segment */
+DECL|method|getIndexHeapUsed
+specifier|private
+specifier|static
+name|long
+name|getIndexHeapUsed
+parameter_list|(
+name|DirectoryReader
+name|reader
+parameter_list|)
+block|{
+name|long
+name|indexHeapRamBytesUsed
+init|=
+literal|0
+decl_stmt|;
+for|for
+control|(
+name|AtomicReaderContext
+name|atomicReaderContext
+range|:
+name|reader
+operator|.
+name|leaves
+argument_list|()
+control|)
+block|{
+name|AtomicReader
+name|atomicReader
+init|=
+name|atomicReaderContext
+operator|.
+name|reader
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|atomicReader
+operator|instanceof
+name|SegmentReader
+condition|)
+block|{
+name|indexHeapRamBytesUsed
+operator|+=
+operator|(
+operator|(
+name|SegmentReader
+operator|)
+name|atomicReader
+operator|)
+operator|.
+name|ramBytesUsed
+argument_list|()
+expr_stmt|;
+block|}
+else|else
+block|{
+comment|// Not supported for any reader that is not a SegmentReader
+return|return
+operator|-
+literal|1
+return|;
+block|}
+block|}
+return|return
+name|indexHeapRamBytesUsed
 return|;
 block|}
 comment|// Get terribly detailed information about a particular field. This is a very expensive call, use it with caution
